Budget Buddy v2.1.7 - Admin Console Managing Products (#19)
* fix: seo tags on static index and node for server

* fix: add product form refixed

* feat: quick alias to source using '@'

* chore: telling editor that '@' is now './src'

* fix(frontend): edit product fetch w/ toast

* fix: reviewed and added delete function
