# server/swagger-output.json
@@ -74,22 +74,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "iss": {
+                "token": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
                 "password": {
-                  "example": "any"
-                },
-                "picture": {
-                  "example": "any"
-                },
-                "name": {
-                  "example": "any"
-                },
-                "email_verified": {
                   "example": "any"
                 }
               }
@@ -119,7 +110,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "iss": {
+                "token": {
                   "example": "any"
                 },
                 "email": {
@@ -161,7 +152,7 @@
         "tags": [
           "v1 | Product"
         ],
-        "description": "Endpoint for uploading images to cloudinary",
+        "description": "Endpoint for posting new products with/without images to cloudinary",
         "parameters": [
           {
             "name": "authorization",
@@ -174,22 +165,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "formType": {
+                "product_name": {
                   "example": "any"
                 },
-                "productId": {
-                  "example": "any"
-                },
-                "productName": {
-                  "example": "any"
-                },
-                "categoryId": {
-                  "example": "any"
-                },
-                "updatedPrice": {
-                  "example": "any"
-                },
-                "locationId": {
+                "category": {
                   "example": "any"
                 }
               }
@@ -205,9 +184,6 @@
           },
           "403": {
             "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -248,7 +224,7 @@
         "tags": [
           "v1 | Product"
         ],
-        "description": "Update a product information by _id",
+        "description": "Update a product information by MongoDB _id",
         "parameters": [
           {
             "name": "id",
@@ -260,6 +236,24 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "product_id": {
+                  "example": "any"
+                },
+                "product_name": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -287,7 +281,7 @@
         "tags": [
           "v1 | Product"
         ],
-        "description": "Delete a product by _id",
+        "description": "Delete a product by MongoDB _id",
         "parameters": [
           {
             "name": "id",
